<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="182dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:elevation="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="0.155"
        app:srcCompat="@drawable/headphones" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="331dp"
        android:layout_height="436dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_rounder"
        android:elevation="2dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center|bottom"
        android:paddingBottom="100dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/home_text"
        android:textColor="@color/bodyText1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/practice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:drawableRight="@drawable/ic_arrow_forward_blue_24dp"
        android:elevation="12dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/to_topics"
        android:textAlignment="center"
        android:textColor="@color/bodyText1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/toolbarText"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:fontFamily="@font/alpha_echo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>